# react-fastapi-auth

./: .gitignore  README.md  docker-compose.yml
fastapi/: Dockerfile  pyproject.toml  start.sh
fastapi/api/: main.py
fastapi/api/router/: auth.py  response.py
nginx/conf.d/: default.conf
react/: Dockerfile
react/front/: index.html  package-lock.json  package.json  vite.config.ts
react/front/src/: App.css  App.tsx
